# whisper

./: .gitignore  install.md
client/: .gitignore  CMakeLists.txt  CMakeLists_CROSS_660.txt
client/conf/: log4cpp.conf  whisper-client.conf
client/include/: config.h  http_server.h  icmp_sampling.h  sampling.h  utility.h
client/src/: config.cpp  http_server.cpp  icmp_sampling.cpp  main.cpp  sampling.cpp  tcp_sampling.cpp  udp_sampling.cpp  utility.cpp
server/: .gitignore  CMakeLists.txt  CMakeLists_CROSS_660.txt
server/conf/: log4cpp.conf  whisper-server.conf
server/include/: config.h  http_server.h  sampling.h  utility.h  version_config.h.in
server/src/: config.cpp  http_server.cpp  main.cpp  sampling.cpp  tcp_sampling.cpp  udp_sampling.cpp  utility.cpp
